--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -237,10 +237,67 @@ on boot
     chown system system /sys/class/leds/red/brightness
     chown system system /sys/class/leds/green/brightness
     chown system system /sys/class/leds/blue/brightness
+    chown system system /sys/class/leds/lcd-backlight/brightness
+    chown system system /sys/class/leds/torch-light/brightness
+    chown system system /sys/class/leds/mmc0::/brightness
+    chown system system /sys/class/leds/mmc1::/brightness
+
+    chown system system /sys/class/leds/red/max_brightness
+    chown system system /sys/class/leds/green/max_brightness
+    chown system system /sys/class/leds/blue/max_brightness
+    chown system system /sys/class/leds/lcd-backlight/max_brightness
+    chown system system /sys/class/leds/torch-light/max_brightness
+    chown system system /sys/class/leds/mmc0::/max_brightness
+    chown system system /sys/class/leds/mmc1::/max_brightness
+
+    chown system system /sys/class/leds/red/trigger
+    chown system system /sys/class/leds/green/trigger
+    chown system system /sys/class/leds/blue/trigger
+    chown system system /sys/class/leds/lcd-backlight/trigger
+    chown system system /sys/class/leds/torch-light/trigger
+    chown system system /sys/class/leds/mmc0::/trigger
+    chown system system /sys/class/leds/mmc1::/trigger
+
     chmod 0664 /sys/class/leds/red/brightness
     chmod 0664 /sys/class/leds/green/brightness
     chmod 0664 /sys/class/leds/blue/brightness
     chmod 0664 /sys/class/leds/lcd-backlight/brightness
+    chmod 0664 /sys/class/leds/torch-light/brightness
+    chmod 0664 /sys/class/leds/mmc0::/brightness
+    chmod 0664 /sys/class/leds/mmc1::/brightness
+
+    chmod 0664 /sys/class/leds/red/max_brightness
+    chmod 0664 /sys/class/leds/green/max_brightness
+    chmod 0664 /sys/class/leds/blue/max_brightness
+    chmod 0664 /sys/class/leds/lcd-backlight/max_brightness
+    chmod 0664 /sys/class/leds/torch-light/max_brightness
+    chmod 0664 /sys/class/leds/mmc0::/max_brightness
+    chmod 0664 /sys/class/leds/mmc1::/max_brightness
+
+    chmod 0664 /sys/class/leds/red/trigger
+    chmod 0664 /sys/class/leds/green/trigger
+    chmod 0664 /sys/class/leds/blue/trigger
+    chmod 0664 /sys/class/leds/lcd-backlight/trigger
+    chmod 0664 /sys/class/leds/torch-light/trigger
+    chmod 0664 /sys/class/leds/mmc0::/trigger
+    chmod 0664 /sys/class/leds/mmc1::/trigger
+
+    # AKM E-compass akm09911
+    chown system compass /sys/class/compass/akm09911/enable_acc
+    chown system compass /sys/class/compass/akm09911/enable_mag
+    chown system compass /sys/class/compass/akm09911/enable_fusion
+    chown system compass /sys/class/compass/akm09911/delay_acc
+    chown system compass /sys/class/compass/akm09911/delay_mag
+    chown system compass /sys/class/compass/akm09911/delay_fusion
+    chown system compass /sys/class/compass/akm09911/accel
+
+    chmod 0660 /sys/class/compass/akm09911/enable_acc
+    chmod 0660 /sys/class/compass/akm09911/enable_mag
+    chmod 0660 /sys/class/compass/akm09911/enable_fusion
+    chmod 0660 /sys/class/compass/akm09911/delay_acc
+    chmod 0660 /sys/class/compass/akm09911/delay_mag
+    chmod 0660 /sys/class/compass/akm09911/delay_fusion
+    chmod 0660 /sys/class/compass/akm09911/accel
 
 # msm specific files that need to be created on /data
 on post-fs-data
@@ -345,15 +402,6 @@ on post-fs-data
 
     # Sensor
     mkdir /persist/sensors 0770 system system
-
-    # AKM E-compass added by cheng_kao
-    chown system system /sys/class/compass/akm09911/enable_acc
-    chown system system /sys/class/compass/akm09911/enable_mag
-    chown system system /sys/class/compass/akm09911/enable_fusion
-    chown system system /sys/class/compass/akm09911/delay_acc
-    chown system system /sys/class/compass/akm09911/delay_mag
-    chown system system /sys/class/compass/akm09911/delay_fusion
-    chown system system /sys/class/compass/akm09911/accel
 
     # RIDL data
     mkdir /data/misc/SelfHost/ 0710 system shell
