--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1059,3 +1059,7 @@ service rmt_oeminfo /system/bin/rmt_oeminfo
 service test_diag /system/bin/test_diag
     class core
     user root
+
+service libqmi_oem_main /system/bin/libqmi_oem_main
+    class core
+    user root
